<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#edf2f4">

    <EditText
        android:textColorHint="@color/colourHint"
        android:layout_marginBottom="@dimen/margin_botom"
        android:hint="@string/enter_your_age"
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:textColorHint="@color/colourHint"
        android:layout_marginBottom="@dimen/margin_botom"
        android:hint="@string/enter_your_height"
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:textColorHint="@color/colourHint"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_your_email"
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:textColorHint="@color/colourText"
        android:layout_marginBottom="@dimen/margin_botom"
        android:hint="@string/enter_your_password"
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:textColor="@color/colourText"
        android:layout_marginBottom="@dimen/margin_botom"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <TextView
        android:textColor="@color/colourText"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/margin_botom"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/see_our_products" />
</LinearLayout>