<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:layout_marginBottom="10dp"
        android:id="@+id/inputOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_marginBottom="10dp"
        android:id="@+id/inputTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="numberDecimal" />

    <Button
        android:layout_marginBottom="10dp"
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calc"
        android:text="@string/calculate" />

    <TextView
        android:layout_marginBottom="10dp"
        android:id="@+id/txtResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result" />
</LinearLayout>